// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Map/MarkerCircle Active 1`] = `
<div
  className="grid place-items-center place-content-center h-screen w-full"
>
  <div
    className="min-w-5 h-5 relative"
  >
    <button
      className="relative rounded-full inline-flex min-w-5 h-5 bg-blue text-white false false hover:bg-green hover:text-blue border-white border-2 focus-offset text-center transition-colors -translate-x-1/2 -translate-y-1/2 cursor-pointer place-items-center place-content-center text-sm font-monospace px-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Map/MarkerCircle Inactive 1`] = `
<div
  className="grid place-items-center place-content-center h-screen w-full"
>
  <div
    className="min-w-5 h-5 relative"
  >
    <button
      className="relative rounded-full inline-flex min-w-5 h-5 false false bg-gray-400 text-white hover:bg-green hover:text-blue border-white border-2 focus-offset text-center transition-colors -translate-x-1/2 -translate-y-1/2 cursor-pointer place-items-center place-content-center text-sm font-monospace px-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Map/MarkerCircle Pulsating 1`] = `
<div
  className="grid place-items-center place-content-center h-screen w-full"
>
  <div
    className="min-w-5 h-5 relative"
  >
    <div
      className="motion-safe:animate-ping absolute -top-1/2 -left-1/2 h-full w-full rounded-full bg-green opacity-90"
    />
    <button
      className="relative rounded-full inline-flex min-w-5 h-5 bg-blue text-white false false hover:bg-green hover:text-blue border-white border-2 focus-offset text-center transition-colors -translate-x-1/2 -translate-y-1/2 cursor-pointer place-items-center place-content-center text-sm font-monospace px-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    />
  </div>
</div>
`;
